--- a/index.html
+++ b/index.html
@@ -166,6 +166,9 @@
                 <div class="item">
                     <span class="project-title"><a href="#hook">Sistem Informasi Akademik</a></span> - <span class="project-tagline">Back End</span>
                 </div><!--//item-->
+                <div class="item">
+                    <span class="project-title"><a href="#hook">Asisten Amalku</a></span> - <span class="project-tagline">Front End</span>
+                </div><!--//item-->
             </section><!--//section-->
             
             <section class="skills-section section">
