--- a/index.html
+++ b/index.html
@@ -191,6 +191,14 @@
                     </div><!--//item-->
 
                     <div class="item">
+                        <h3 class="level-title">Sass</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="80%">
+                            </div>                                      
+                        </div><!--//level-bar-->                                 
+                    </div><!--//item-->
+
+                    <div class="item">
                         <h3 class="level-title">Javascript &amp; jQuery</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="78%">
