--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <span class="project-title"><a href="#hook">Sistem Informasi Akademik</a></span> - <span class="project-tagline">Back End</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="project-title"><a href="#hook">Asisten Amalku</a></span> - <span class="project-tagline">Front End</span>
+                    <span class="project-title"><a href="http://amalku.riffsys.com/">Asisten Amalku</a></span> - <span class="project-tagline">Front End</span>
                 </div><!--//item-->
             </section><!--//section-->
 
@@ -283,7 +283,7 @@
                      <div class="item">
                         <h3 class="level-title">Express Js</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="60%">
+                            <div class="level-bar-inner" data-level="100%">
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
