--- a/index.html
+++ b/index.html
@@ -200,7 +200,19 @@
                     <span class="project-title"><a href="#hook">Sistem Informasi Akademik</a></span> - <span class="project-tagline">Back End</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="project-title"><a href="http://amalku.riffsys.com/">Asisten Amalku</a></span> - <span class="project-tagline">Front End</span>
+                    <span class="project-title"><a href="http://amalku.riffsys.com/" target="_blank">Asisten Amalku</a></span> - <span class="project-tagline">Front End</span>
+                </div><!--//item-->
+                <div class="item">
+                    <span class="project-title"><a href="http://ysk.id/" target="_blank">Yayasan Sedekah Kretif</a></span> - <span class="project-tagline">Front End</span>
+                </div><!--//item-->
+                <div class="item">
+                    <span class="project-title"><a href="https://mawaddahindonesia.com/" target="_blank">Mawaddah Inndonesia</a></span> - <span class="project-tagline">Front End</span>
+                </div><!--//item-->
+                <div class="item">
+                    <span class="project-title"><a href="https://alihsan.id/" target="_blank">Yayasan Al-Ihsan Bumirejo</a></span> - <span class="project-tagline">Front End & Back End</span>
+                </div><!--//item-->
+                <div class="item">
+                    <span class="project-title"><a href="https:https://alawwabin.com/" target="_blank">Masjid Al-Alawwabin</a></span> - <span class="project-tagline">Front End & Back End</span>
                 </div><!--//item-->
             </section><!--//section-->
 
