--- a/index.html
+++ b/index.html
@@ -209,6 +209,9 @@
                     <span class="project-title"><a href="https://mawaddahindonesia.com/" target="_blank">Mawaddah Inndonesia</a></span> - <span class="project-tagline">Front End</span>
                 </div><!--//item-->
                 <div class="item">
+                    <span class="project-title"><a href="https://uhudtour.com/" target="_blank">Travel Uhud Tours</a></span> - <span class="project-tagline">Front End</span>
+                </div><!--//item-->
+                <div class="item">
                     <span class="project-title"><a href="https://alihsan.id/" target="_blank">Yayasan Al-Ihsan Bumirejo</a></span> - <span class="project-tagline">Front End & Back End</span>
                 </div><!--//item-->
                 <div class="item">
