--- a/index.html
+++ b/index.html
@@ -230,6 +230,14 @@
                         </div><!--//level-bar-->
                     </div><!--//item-->
 
+                    <div class="item">
+                       <h3 class="level-title">Ruby On Rails</h3>
+                       <div class="level-bar">
+                           <div class="level-bar-inner" data-level="70%">
+                           </div>
+                       </div><!--//level-bar-->
+                   </div><!--//item-->
+
                      <div class="item">
                         <h3 class="level-title">CSS</h3>
                         <div class="level-bar">
