--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Saifudin Zuhri || Front End Developer</title>
+    <title>Saifudin Zuhri || Software Engineer</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,13 +21,13 @@
             <div class="profile-container">
                 <img class="profile" src="assets/images/profile.png" alt="" />
                 <h2 class="name">Saifudin Zuhri</h2>
-                <h3 class="tagline">Front End Developer </h3>
+                <h3 class="tagline">Software Engineer </h3>
             </div><!--//profile-container-->
 
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
                     <li class="email"><i class="fa fa-envelope"></i><a href="mailto: yourname@email.com">zuhrisaifudin57@gmail.com</a></li>
-                    <li class="phone"><i class="fa fa-phone"></i><a href="tel:0123 456 789">08974317892</a></li>
+                    <li class="phone"><i class="fa fa-phone"></i><a href="tel:0123 456 789">082112104350</a></li>
                     <li class="website"><i class="fa fa-globe"></i><a href="http://themes.3rdwavemedia.com/website-templates/free-responsive-website-template-for-developers/" target="_blank">zuhrisaifudin.github.io</a></li>
                     <li class="linkedin"><i class="fa fa-linkedin"></i><a href="#" target="_blank">linkedin.com/in/saifudinzuhri</a></li>
                     <li class="github"><i class="fa fa-github"></i><a href="#" target="_blank">github.com/zuhrisaifudin</a></li>
@@ -39,7 +39,7 @@
                 <div class="item">
                     <h4 class="degree">INFORMATION SYSTEMS</h4>
                     <h5 class="meta">STMIK NUSA MANDIRI</h5>
-                    <h5 class="meta">Information System Developer</h5>
+                    <h5 class="meta">Information System</h5>
                     <div class="time">2011 - On Going </div>
                 </div><!--//item-->
                 <div class="item">
@@ -73,7 +73,7 @@
             <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
                 <div class="summary">
-                    <p>I am Web developer and QA engineer. I develop and test responsive, cross-browser, and clean website / web aplication with HTML, CSS, and Javascript. </p>
+                    <p>I'm a generalist specializing in software development having over 3 years of experience with passion to leverage business using IT. Currently I'm working as Software Engineer in Gazwah Enterprise  </p>
                 </div><!--//summary-->
             </section><!--//section-->
 
@@ -82,26 +82,33 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Front End Engineer</h3>
-                            <div class="time">2018 - Present</div>
+                            <h3 class="job-title">Software Engineer</h3>
+                            <div class="time">2017 - Present</div>
                         </div><!--//upper-row-->
-                        <div class="company"> YAYASAN SEDEKAH KREATIF</div>
+                        <div class="company">Gazwah Enterprise</div>
+
                     </div><!--//meta-->
                     <div class="details">
-                        <p>KHB Indonesia adalah sebuah tim yang bergerak dalam menyampaikan, menyalurkan amanah dari umat yang dititipkan melalui Infaq Shodaqoh Yayasan Khalid Basalamah. Beberapa program yang sedang berjalan melalui KHB Indonesia adalah Program Motor Da'i, Lazeez, Rumah Qur'an As-Sunnah</p>
+                        <p>Gazwah Enterprise Is a company that owns several companies such as Travel Uhud Tour , Sedekah Kreatif Foundation ,Mawaddah Indonesia, Ajwad Resto, Ajwad Store </p>
                         <h3 class="job-title">Tech Stack</h3>
                         <ul>
-                            <li>Data storage: MySQL, ElasticSearch</li>
+                            <li>Data storage: MySQL, ElasticSearch , S3</li>
                             <li>Frontend: HTML5/React web apps, native Android apps, React Native apps</li>
                             <li>Data access, messaging: Firebase</li>
                             <li>Server core: Ruby on Rails</li>
-                            <li>Infrastructure and deployment: AWS, Digital Ocean ,  </li>
+                            <li>Infrastructure and deployment: AWS, Digital Ocean, Google Cloud , Heroku ,Caspirano, Cloud 66 Rails </li>
                         </ul>
                         <h3 class="job-title">What I Do</h3>
                         <ul>
+                            <li>Develop Full applications using Ruby on Rails</li>
                             <li>Develop, test and maintain responsive web/mobile apps with elegant UX that delight our users and raise their productivity.</li>
                             <li>Write clean and modular code that you are proud of, with extensibility and performance in mind. </li>
                             <li>Work in cross functional teams with product managers, UX designers and QA engineers to ship software on-quality and on-time.</li>
+                            <li>Working closely with DevOps to maintain the application in our infrastructure</li>
+                            <li>Maintain and ensure effective System Engineering implementation process aligning with user’s requirement</li>
+                            <li>Develop API for internal Apps Using Ruby On Rails API</li>
+                            <li>Develop a scalable and efficient web based application</li>
+                            <li>Build CI/CD pipeline For Deployment</li>
                         </ul>
                         <h3 class="job-title">Tools</h3>
                         <ul>
@@ -116,8 +123,8 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">SOFTWARE TEST ENGINEER</h3>
-                            <div class="time">2016 - Present</div>
+                            <h3 class="job-title">Software Engineer In QA</h3>
+                            <div class="time">2016 - 2017</div>
                         </div><!--//upper-row-->
                         <div class="company"> PT. NINJA XPRESS Startup From Singapura</div>
                     </div><!--//meta-->
