--- a/index.html
+++ b/index.html
@@ -198,25 +198,25 @@
             <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
                 <div class="intro">
-
+                
                 </div><!--//intro-->
-                <div class="item">
-                    <span class="project-title"><a href="#hook">The Tarizu</a></span> - <span class="project-tagline">Front End</span>
-                </div><!--//item-->
                 <div class="item">
                     <span class="project-title"><a href="#hook">Sistem Informasi Akademik</a></span> - <span class="project-tagline">Back End</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="project-title"><a href="http://amalku.riffsys.com/" target="_blank">Asisten Amalku</a></span> - <span class="project-tagline">Front End</span>
                 </div><!--//item-->
-                <div class="item">
-                    <span class="project-title"><a href="http://ysk.id/" target="_blank">Yayasan Sedekah Kretif</a></span> - <span class="project-tagline">Front End</span>
+                 <div class="item">
+                    <span class="project-title"><a href="http://gazwahpeduli.com/" target="_blank">Gazwah Peduli</a></span> - <span class="project-tagline">Front End & Infrastructure</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="project-title"><a href="https://mawaddahindonesia.com/" target="_blank">Mawaddah Inndonesia</a></span> - <span class="project-tagline">Front End</span>
+                    <span class="project-title"><a href="http://sedekah-kreatif.org/" target="_blank">Yayasan Sedekah Kretif</a></span> - <span class="project-tagline">Front End & Back End</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="project-title"><a href="https://uhudtour.com/" target="_blank">Travel Uhud Tours</a></span> - <span class="project-tagline">Front End</span>
+                    <span class="project-title"><a href="https://mawaddahindonesia.com/" target="_blank">Mawaddah Inndonesia</a></span> - <span class="project-tagline">Front End & Infrastructure</span>
+                </div><!--//item-->
+                <div class="item">
+                    <span class="project-title"><a href="https://uhudtour.com/" target="_blank">Travel Uhud Tours</a></span> - <span class="project-tagline">Front End & Back End</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="project-title"><a href="https://alihsan.id/" target="_blank">Yayasan Al-Ihsan Bumirejo</a></span> - <span class="project-tagline">Front End & Back End</span>
