--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
-                    <li class="email"><i class="fa fa-envelope"></i><a href="mailto: yourname@email.com">zuhrisaifudin57@gmail.com</a></li>
-                    <li class="phone"><i class="fa fa-phone"></i><a href="tel:0123 456 789">082112104350</a></li>
-                    <li class="website"><i class="fa fa-globe"></i><a href="http://themes.3rdwavemedia.com/website-templates/free-responsive-website-template-for-developers/" target="_blank">zuhrisaifudin.github.io</a></li>
+                    <li class="email"><i class="fa fa-envelope"></i><a href="mailto: zuhrisaifudin57@gmail.com">zuhrisaifudin57@gmail.com</a></li>
+                    <li class="phone"><i class="fa fa-phone"></i><a href="tel:082112104350">082112104350</a></li>
+                    <li class="website"><i class="fa fa-globe"></i><a href="http://zuhrisaifudin.github.io" target="_blank">zuhrisaifudin.github.io</a></li>
                     <li class="linkedin"><i class="fa fa-linkedin"></i><a href="#" target="_blank">linkedin.com/in/saifudinzuhri</a></li>
                     <li class="github"><i class="fa fa-github"></i><a href="#" target="_blank">github.com/zuhrisaifudin</a></li>
-                    <li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/3rdwave_themes" target="_blank">@zuhrisaifudin45</a></li>
+                    <li class="twitter"><i class="fa fa-twitter"></i><a href="" target="_blank">@zuhrisaifudin45</a></li>
                 </ul>
             </div><!--//contact-container-->
             <div class="education-container container-block">
@@ -73,7 +73,8 @@
             <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
                 <div class="summary">
-                    <p>I'm a generalist specializing in software development having over 3 years of experience with passion to leverage business using IT. Currently I'm working as Software Engineer in Gazwah Enterprise  </p>
+                    <p>I'm a generalist specializing in software development having over 5 years of experience with passion to leverage business using IT. Currently I'm working as Software Engineer in Gazwah Enterprise  </p>
+                    <p>Competencies : Leadership, Software Project Management, IT Management, System Analysis, Software Architecture & Design, Software Development, Software Quality Assurance, Software QA Automation, Enterprise Integration, Reporting & Analysis, Dev Ops.</p>
                 </div><!--//summary-->
             </section><!--//section-->
 
