--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         </ul>
                         <h3 class="job-title">What I Do</h3>
                         <ul>
-                            <li>Develop Full applications using Ruby on Rails</li>
+                            <li>Develop Full applications using Ruby on Rails And Laravel Framework</li>
                             <li>Develop, test and maintain responsive web/mobile apps with elegant UX that delight our users and raise their productivity.</li>
                             <li>Write clean and modular code that you are proud of, with extensibility and performance in mind. </li>
                             <li>Work in cross functional teams with product managers, UX designers and QA engineers to ship software on-quality and on-time.</li>
@@ -223,7 +223,16 @@
                     <span class="project-title"><a href="https://alihsan.id/" target="_blank">Yayasan Al-Ihsan Bumirejo</a></span> - <span class="project-tagline">Front End & Back End</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="project-title"><a href="https:https://alawwabin.com/" target="_blank">Masjid Al-Alawwabin</a></span> - <span class="project-tagline">Front End & Back End</span>
+                    <span class="project-title"><a href="alawwabin.com/" target="_blank">Masjid Al-Alawwabin</a></span> - <span class="project-tagline">Front End & Back End</span>
+                </div><!--//item-->
+                <div class="item">
+                    <span class="project-title"><a href="https://feedloo-stag.herokuapp.com/contact-us" target="_blank">Feedloop</a></span> - <span class="project-tagline">Front End </span>
+                </div><!--//item-->
+                <div class="item">
+                    <span class="project-title"><a href="http://rukoo.id/" target="_blank">Rukoo</a></span> - <span class="project-tagline">Front End & Back End</span>
+                </div><!--//item-->
+                   <div class="item">
+                    <span class="project-title"><a href="http://gazwah.com/" target="_blank">Gazwah Media</a></span> - <span class="project-tagline">Front End & Back End</span>
                 </div><!--//item-->
             </section><!--//section-->
 
